--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,14 @@
+body {
+  display: flex;
+  max-width: 100%;
+}
+
 .main-thumbnails {
-  display: flex-;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .thumbnails {
-  flex: 33.33%;
-  padding: 5px;
+  flex: 25%;
+  padding: 30px;
 }
