Added Lightbox and viewport meta tag

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,15 @@ body {
 }
 
 .thumbnails {
-  flex: 25%;
+  flex: 33.33%;
   padding: 30px;
+  box-sizing: border-box;
+  }
+
+@media (max-width: 768px) {
+  .thumbnails {
+    flex: 50%;
+    padding: 30px;
+    box-sizing: border-box;
+  }
 }
