--- a/css/styles.css
+++ b/css/styles.css
@@ -9,14 +9,21 @@ body {
 }
 
 .thumbnails {
-  flex: 33.33%;
+  flex: 100%;
   padding: 30px;
   box-sizing: border-box;
   }
 
-@media (max-width: 768px) {
+  @media (min-width: 768px) {
+    .thumbnails {
+      flex: 50%;
+      padding: 30px;
+      box-sizing: border-box;
+    }
+  }
+@media (min-width: 1204px) {
   .thumbnails {
-    flex: 50%;
+    flex: 33.33%;
     padding: 30px;
     box-sizing: border-box;
   }
