Added interactive searchbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   max-width: 100%;
   background: #e4eaf0;
 }
-
+/* Searchbox */
 .wrapper{
   position: absolute;
   top: 0%;
@@ -17,6 +17,49 @@ body {
   transform: translate(-50%, -50%);
   margin-top: 15px;
 }
+.searchbox{
+  position: relative;
+}
+.searchbox .input{
+  width: 0px;
+  border: 0;
+  height: 75px;
+  padding: 0px 35px;
+  border-radius: 50px;
+  box-shadow: 0 0 15px 1px #b6bbc0;
+  outline: none;
+  /* color: #42be11; */
+  font-size: 24px;
+  font-weight: bold;
+  transition: all 0.5s linear;
+}
+.searchbtn{
+  position: absolute;
+  top: 0;
+  right: -1px;
+  background: #e4eaf0;
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all 0.5s linear;
+}
+.searchbtn .fas{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 22px;
+  transition: all 0.5s linear;
+}
+.searchbox .input.active-width{
+  width: 275px;
+}
+
+
+
+/* Pholots */
+
 .main-thumbnails {
   display: flex;
   flex-wrap: wrap;
