--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 
 *{
   margin: 0;
-  padding: 0;
+  padding-top: 0;
 }
 
 body {
@@ -15,7 +15,7 @@ body {
   top: 0%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin-top: 15px;
+  margin-top: 55px;
 }
 .searchbox{
   position: relative;
@@ -51,6 +51,7 @@ body {
   transform: translate(-50%, -50%);
   font-size: 22px;
   transition: all 0.5s linear;
+
 }
 .searchbox .input.active-width{
   width: 275px;
@@ -63,6 +64,7 @@ body {
 .main-thumbnails {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 80px;
 }
 
 .thumbnails {
